--- a/Gamperl/Base.lproj/Main.storyboard
+++ b/Gamperl/Base.lproj/Main.storyboard
@@ -538,7 +538,7 @@
         <!--View Controller-->
         <scene sceneID="fbn-oS-vDh">
             <objects>
-                <viewController id="rsM-zP-2uG" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PlanViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="rsM-zP-2uG" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jCB-jc-a2t"/>
                         <viewControllerLayoutGuide type="bottom" id="9xh-lJ-Zm9"/>
@@ -619,16 +619,16 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="reveal all the requests within the next 6 months" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Eq-6Z-siW">
-                                <rect key="frame" x="137.5" y="226.5" width="55" height="117"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="reveal all the request within the next 6 months" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Eq-6Z-siW">
+                                <rect key="frame" x="137" y="226.5" width="56" height="117"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="55" id="wF1-Mc-9ZE"/>
+                                    <constraint firstAttribute="width" constant="56" id="wF1-Mc-9ZE"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="reveal all the requests within the next 1 year" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UU4-wg-2d9">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="reveal all the request within the next 1 year" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UU4-wg-2d9">
                                 <rect key="frame" x="257" y="226.5" width="55" height="100.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="55" id="wrM-Bs-Bes"/>
